--- a/package.json
+++ b/package.json
@@ -24,12 +24,21 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mongoose": "^11.0.3",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^10.4.17",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "class-validator-i18n": "^1.1.0",
+    "class-validator-multi-lang": "^0.140.1",
     "dotenv": "^16.5.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
     "mongoose": "^8.13.2",
+    "nestjs-i18n": "^10.5.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
